# SALMON_CORE

./: .gitignore  README.md  SALMON.html  daily_retrievals.py  dev_run.sh  my_sbatch.sh  pyproject.toml  salmon_config.yaml  salmon_run.py  setup.py  watch.sh
COLDSURGE/: main_glosea.py  main_mogreps.py
COLDSURGE/display/: coldsurge_plot_bokeh.py
COLDSURGE/mogreps/: mogreps_process.py
EQWAVES/: main_mogreps.py  main_mogreps_dev.py
INDICES/: monsoon_indices.py
MJO/: main_glosea.py  main_mogreps.py
MJO/verif/: verif_util.py
RETRIEVALS/: daily_retrievals.py  mogreps_combined.query  test_query.txt
docs/: RECIPE_GUIDE.md
recipes/: coldsurge.yaml  eqwaves.yaml  mjo_mogreps.yaml  monsoon_monitoring.yaml  salmon_prod.yaml
run_scripts/: JASMIN_data_transfer  convlines_sbatch.sh  cs_sbatch.sh  eqwaves_sbatch.sh  indices_sbatch.sh  mjo_sbatch.sh  my_sbatch.sh
salmon/: cli.py
slurm_logs/: cs_2025-05-01.out  cs_mogreps_2025-04-24.out  cs_mogreps_2025-04-25.out  cs_mogreps_2025-04-28.out  cs_mogreps_2025-04-29.out  cs_mogreps_2025-05-02.out  cs_mogreps_2025-05-06.out  eqw_.out  eqw_mogreps_2025-05-01_00.out  eqw_mogreps_2025-05-01_06.out  eqw_mogreps_2025-05-01_12.out  eqw_mogreps_2025-05-01_18.out  eqw_mogreps_2025-05-05_00.out  eqw_mogreps_2025-05-05_06.out  eqw_mogreps_2025-05-05_12.out  eqw_mogreps_2025-05-05_18.out  mjo_mogreps_2025-04-24.out  mjo_mogreps_2025-04-25.out  mjo_mogreps_2025-04-30.out  mjo_mogreps_2025-05-01.out  mjo_mogreps_2025-05-02.out  mjo_mogreps_2025-05-05.out  mjo_mogreps_2025-05-06.out
tests/: test_core.py  test_js.html  test_utils.py
(+105 files in other folders)
