[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "salmon_core"
version = "2.0.0"
description = "SALMON_CORE: Southeast Asia Large Scale Monitoring tool"
authors = [{ name = "Prince Xavier" }]
requires-python = ">=3.9"

dependencies = [
    "scitools-iris>=3.10,<3.14",  # 3.14.x has a circular import bug with iris.FUTURE
    "numpy",
    "pyyaml",
    "click",
    "pandas",
    "pydantic",
    "scipy",
    "scikit-image",
    "tqdm",
]

[project.scripts]
salmon = "salmon.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["salmon*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
